# magick-ii

./: .cvsignore  AUTHORS  COPYING  ChangeLog  ChangeLog.1999  ChangeLog.2000  ChangeLog.2001  ChangeLog.2002  ChangeLog.old  FAQ  INSTALL  KNOWN-BUGS  Magick-2.0.spec  Magick.spec  Makefile  Makefile.am  Makefile.dist  Makefile.inc  Makefile.sunos  NEWS  README  TODO  acconfig.h  ace_uname.cpp  aclocal.m4  config.h.in  configure.in  convert.dsp  crypt.dep  crypt.dsp  crypt.mak  magick.dep  magick.dsp  magick.dsw  magick.kdevprj  magick.lsm  magick.mak  magick.rc  magick_keygen.dep  magick_keygen.dsp  (+26 more)
docs/: Makefile.am  docs.bpr  docs.cpp  magick.ini  oper.txt  oper_docbook.sgml  user.txt  user_docbook.sgml
docs/devel/: .cvsignore  2.1data_storage_abstraction.html  2.1inter-magick_protocol.html  2.1magick_client.html  2.1mantra.html  2.1scripting_language.html  Makefile  Makefile.am  comms-proto.txt  communication.txt  config.h  dbase.txt  develop.txt  doxygen.conf  future.txt  magick.css  policy.txt  requirements.txt  spec_index.html  spec_template.html  suggest.txt  utils.js  versionstamps.txt
docs/en/: .cvsignore  Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.info  index.info-1  index.info-2  index.sgml  index.txt
docs/html/: License.html
docs/man/: .cvsignore  Makefile.am  magick.pod  magick_keygen.pod  magick_stampkeys.pod
docs/rfcs/: The Client-To-Client Protocol (CTCP).txt
docs/text/: commands.txt  formats.txt  install.txt
gui/: .cvsignore  ChanServ.java  CommServ.java  Config.java  ConfigView.java  Files.java  HexFormat.java  IniParser.java  IpAddressFormat.java  JMultiLineToolTip.java  Makefile.am  MemoServ.java  NickServ.java  NumberRangeFormat.java  OctalFormat.java  OperServ.java  PercentageFormat.java  ServMsg.java  Services.java  SpaceFormat.java  Startup.java  TabbedPane.java  TimeFormat.java  ToolTips.java  config.html  mct.html  mct.java  mct.mf  myTableCellEditor.java
helper/: add-patch  blank-patch  build-ver  commit.bat  cvs2cl.pl  makelang  makelog  rem-patch  reset-ver  run_gui.bat  run_magick.bat  run_magick_keygen.bat  servicesbkup  serviceschk  servicescycle  uninstall.bat  uninstall2.bat  update.bat
include/: .cvsignore  Makefile.am  ace_memory.h  base.h  build.h  chanserv.h  commserv.h  confbase.h  config.h  config.h.in  config.h.top  config.h.win  convert.h  convert_epona.h  convert_esper.h  convert_hybserv.h  convert_magick.h  crypt.h.win  cryptstream.h  datetime.h  dccengine.h  fileconf.h  filesys.h  ircsocket.h  language.h  lockable.h  log.h  logfile.h  magick.h  mconfig.h  memoserv.h  mexceptions.h  mmemory.h  mstream.h  mstring.h  nickserv.h  operserv.h  pch.h  server.h  servmsg.h  (+8 more)
include/convert/: .cvsignore  Makefile.am  auspice.h  bolivia.h  cygnus.h  daylight.h  epona.h  hybserv.h  interface.h  ircs.h  ircservices.h  magick.h  ptlink.h  sirv.h  srvx.h  trircd.h  wrecked.h
include/crypt/: Makefile.am  bf_locl.h  bf_pi.h  blowfish.h  md5.h  md5_locl.h
include/xml/: Makefile.am  ascii.h  asciitab.h  expat.h  hashtable.h  iasciitab.h  latin1tab.h  nametab.h  sxp.h  sxp_data.h  utf8tab.h  xmlconfig.h  xmlparse.h  xmlrole.h  xmltchar.h  xmltok.h  xmltok_impl.h
ircd/: Makefile.am  ircd.aurora.ini  ircd.bahamut.ini  ircd.dal.ini  ircd.dal4.4.15.ini  ircd.hybrid5.ini  ircd.hybrid7.ini  ircd.ircu.ini  ircd.ircu2.10.ini  ircd.ircu2.10ext.ini  ircd.rfc1459+ts8.ini  ircd.rfc1459.ini  ircd.trircd.ini  ircd.trircd5.ini  ircd.unreal.ini
lang/: .cvsignore  Makefile.am  babel.pl  checklang.pl  dark.lng  dutch.lng  english.hlp  english.lfo  english.lng  example.lfo  example.lng  french.hlp  french.lfo  french.lng  german.hlp  german.lfo  german.lng  italian.hlp  italian.lfo  italian.lng  leet.lng  portuguese.hlp  portuguese.lfo  portuguese.lng  spanish.hlp  spanish.lfo  spanish.lng  swedish.lfo  turkish.lng
src/: .cvsignore  EscLexer.cpp  EscLexer.hpp  EscLexerTokenTypes.hpp  EscLexerTokenTypes.txt  EscParser.cpp  EscParser.hpp  Makefile  Makefile.am  Makefile.am.dist  Makefile.sunos  base.cpp  chandata.cpp  chanserv.cpp  commserv.cpp  confbase.cpp  convert.cpp  convert_epona.cpp  convert_esper.cpp  convert_hybserv.cpp  convert_magick.cpp  cryptstream.cpp  datetime.cpp  dccengine.cpp  escparse.g  fileconf.cpp  filesys.cpp  genrankeys.c  ircsocket.cpp  lockable.cpp  log.cpp  magick.cpp  magick_keygen.c  magick_stampkeys.c  main.cpp  mconfig.cpp  memoserv.cpp  mstream.cpp  mstring.cpp  nickdata.cpp  (+10 more)
src/convert/: .cvsignore  Makefile.am  auspice.cpp  bolivia.cpp  cygnus.cpp  daylight.cpp  epona.cpp  hybserv.cpp  interface.cpp  ircs.cpp  ircservices.cpp  magick.cpp  ptlink.cpp  sirv.cpp  srvx.cpp  trircd.cpp  wrecked.cpp
src/crypt/: .cvsignore  Makefile.am  README  bf_enc.c  bf_skey.c  crypto.bpr  crypto.cpp  crypto.dsp  crypto.mak  md5_dgst.c
src/xml/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  config.cpp  graph.cpp  hashtable.c  index.html  sxp.cpp  sxp.html  xml.bpr  xml.cpp  xml.dsp  xml.mak  xmlparse.c  xmlrole.c  xmltok.c  xmltok_impl.c  xmltok_ns.c
